lets-Encrpt/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - www.afeezadeboye.site
    secretName: hello-world-tls
  rules:
  - host: www.afeezadeboye.site
    http:
      paths:
      - backend:
          service:
            name: http-echo
            port:
              number: 80
        path: /
        pathType: Prefix
