lets-Encrpt/ingress-resource-prometheus.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: promethus-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: letsencrypt-prod
  spec:
    tls:
    - hosts:
      - prometheus.afeezadeboye.site
      secretName: prometheus-tls
    rules:
       -  host: prometheus.afeezadeboye.site
          http:
            paths:
            - backend:
                service:
                  name: prometheus
                  port:
                    number: 80
              path: /
              pathType: Prefix
